[gd_scene load_steps=32 format=3 uid="uid://dqfs1l2wbx2p2"]

[ext_resource type="Script" path="res://scripts/ParallaxLayerscroll.gd" id="1_1d7ft"]
[ext_resource type="Script" path="res://scripts/cinematic intro.gd" id="1_47441"]
[ext_resource type="Texture2D" uid="uid://bjpwnsp8up5xs" path="res://sprites/cinematic/intro 1 layer 1.png" id="1_u46m3"]
[ext_resource type="Texture2D" uid="uid://dhuik3aeaa8c8" path="res://sprites/cinematic/intro 1 layer 2.png" id="2_dwud4"]
[ext_resource type="Texture2D" uid="uid://m5nw237xg2rf" path="res://sprites/cinematic/intro 1 layer 3.png" id="3_ddtgy"]
[ext_resource type="Texture2D" uid="uid://bjteqqj7qdjnj" path="res://sprites/cinematic/intro 2 layer 1.png" id="6_pjpoa"]
[ext_resource type="Texture2D" uid="uid://bs0orgkd6jov5" path="res://sprites/cinematic/intro 2 layer 2.png" id="7_2nwib"]
[ext_resource type="Texture2D" uid="uid://bu5sxqi3d411b" path="res://sprites/cinematic/intro 2 layer 3.png" id="8_1np4h"]
[ext_resource type="Texture2D" uid="uid://mg0v1c00yu8i" path="res://sprites/cinematic/intro 2 layer 4.png" id="9_lnlwq"]
[ext_resource type="Shader" path="res://shader/cinematic intro blend.gdshader" id="10_8453d"]
[ext_resource type="Texture2D" uid="uid://deftx7goe10fj" path="res://sprites/cinematic/intro 2 layer 5.png" id="10_abux7"]
[ext_resource type="Texture2D" uid="uid://bwu4n7my6qul3" path="res://sprites/cinematic/intro 3 layer 1.png" id="12_qwdoq"]
[ext_resource type="Texture2D" uid="uid://b1s0dhuvidwnr" path="res://sprites/cinematic/intro 3 layer 2.png" id="13_215yi"]
[ext_resource type="Texture2D" uid="uid://pxhia3v17jgq" path="res://sprites/cinematic/intro 3 layer 3.png" id="14_11inx"]
[ext_resource type="Texture2D" uid="uid://bumev833qqmuj" path="res://sprites/cinematic/intro 4 layer 1.png" id="15_1orh4"]
[ext_resource type="Texture2D" uid="uid://cuoc3e1j3xac1" path="res://sprites/cinematic/intro 4 layer 2.png" id="16_juk5m"]
[ext_resource type="Texture2D" uid="uid://dfrg71a7o1y2g" path="res://sprites/cinematic/intro 4 layer 3.png" id="17_t404n"]
[ext_resource type="Texture2D" uid="uid://ddmuyw4gjag4e" path="res://sprites/cinematic/intro 4 layer 4.png" id="18_qnpfj"]
[ext_resource type="Texture2D" uid="uid://6k8bqf0em1yk" path="res://sprites/cinematic/intro 5 layer 1.png" id="19_a8hdn"]
[ext_resource type="Texture2D" uid="uid://bs87nnklrkay4" path="res://sprites/cinematic/intro 5 layer 2.png" id="20_vv41a"]
[ext_resource type="Texture2D" uid="uid://xhlhgiukqfkq" path="res://sprites/cinematic/intro 5 layer 3.png" id="21_s2byp"]
[ext_resource type="Texture2D" uid="uid://cjkyvqvw3tlul" path="res://sprites/cinematic/intro 5 layer 4.png" id="22_i3mfx"]
[ext_resource type="Texture2D" uid="uid://rc837h64rb2l" path="res://sprites/cinematic/intro 6 layer 1.png" id="23_f8v8d"]
[ext_resource type="Texture2D" uid="uid://xbri06i05hmy" path="res://sprites/cinematic/intro 6 layer 2.png" id="24_1fa3e"]
[ext_resource type="Texture2D" uid="uid://3c8g2453qxae" path="res://sprites/cinematic/intro 7 layer 1.png" id="25_cheno"]
[ext_resource type="Texture2D" uid="uid://qufjub6lk6yc" path="res://sprites/cinematic/intro 7 layer 2.png" id="26_okygo"]
[ext_resource type="Texture2D" uid="uid://b4t21k18umdq6" path="res://sprites/cinematic/intro 7 layer 3.png" id="27_m2w88"]
[ext_resource type="Texture2D" uid="uid://yoia3ackkmay" path="res://sprites/cinematic/intro 8 layer 1.png" id="28_otq0j"]
[ext_resource type="Texture2D" uid="uid://xni667csdjun" path="res://sprites/cinematic/intro 8 layer 2.png" id="29_5i0wh"]
[ext_resource type="Texture2D" uid="uid://dus8en84wauq3" path="res://sprites/cinematic/intro 8 layer 3.png" id="30_y5uig"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cvwc2"]
shader = ExtResource("10_8453d")

[node name="CinematicIntro" type="Node2D"]
script = ExtResource("1_47441")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro1Layer1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(-32, -8)
texture = ExtResource("1_u46m3")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -12.0

[node name="Intro1Layer1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(-32, -8)
texture = ExtResource("2_dwud4")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")

[node name="Intro1Layer1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(-32, -8)
texture = ExtResource("3_ddtgy")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro2Layer1" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer"]
position = Vector2(1, -5)
texture = ExtResource("6_pjpoa")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 15.0

[node name="Intro2Layer2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer2"]
position = Vector2(1, -5)
texture = ExtResource("7_2nwib")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")

[node name="Intro2Layer3" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2(1, -5)
texture = ExtResource("8_1np4h")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 3
position = Vector2(630, 324)
script = ExtResource("1_1d7ft")
SPEED = -30.0

[node name="Intro2Layer4" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer4"]
position = Vector2(1, -5)
texture = ExtResource("9_lnlwq")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground2"]
z_index = 3
position = Vector2(512, 324)
script = ExtResource("1_1d7ft")
SPEED = 15.0

[node name="Intro2Layer5" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer5"]
material = SubResource("ShaderMaterial_cvwc2")
position = Vector2(1, -5)
texture = ExtResource("10_abux7")

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro3Layer1" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer"]
position = Vector2(3, 24)
texture = ExtResource("12_qwdoq")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 5.0

[node name="Intro3Layer2" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer2"]
position = Vector2(3, 24)
texture = ExtResource("13_215yi")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground3"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -1.0

[node name="Intro3Layer3" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer3"]
position = Vector2(3, 24)
texture = ExtResource("14_11inx")

[node name="ParallaxBackground4" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground4"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro4Layer1" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer"]
position = Vector2(14, 15)
texture = ExtResource("15_1orh4")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground4"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 3.0

[node name="Intro4Layer2" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer2"]
position = Vector2(14, 15)
texture = ExtResource("16_juk5m")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground4"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -1.0

[node name="Intro4Layer4" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer4"]
position = Vector2(14, 15)
texture = ExtResource("18_qnpfj")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground4"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -5.0

[node name="Intro4Layer3" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer3"]
position = Vector2(14, 15)
texture = ExtResource("17_t404n")

[node name="ParallaxBackground5" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground5"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 10.0

[node name="Intro5Layer1" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer"]
position = Vector2(-31, -8)
texture = ExtResource("19_a8hdn")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground5"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -3.0

[node name="Intro5Layer2" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer2"]
position = Vector2(-31, -8)
texture = ExtResource("20_vv41a")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground5"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 0.0

[node name="Intro5Layer4" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer4"]
position = Vector2(-31, -8)
texture = ExtResource("22_i3mfx")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground5"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 2.0

[node name="Intro5Layer3" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer3"]
position = Vector2(-31, -8)
texture = ExtResource("21_s2byp")

[node name="ParallaxBackground6" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground6"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro6Layer1" type="Sprite2D" parent="ParallaxBackground6/ParallaxLayer"]
position = Vector2(-3, 1)
texture = ExtResource("23_f8v8d")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground6"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 10.0

[node name="Intro6Layer2" type="Sprite2D" parent="ParallaxBackground6/ParallaxLayer2"]
position = Vector2(-3, 1)
texture = ExtResource("24_1fa3e")

[node name="ParallaxBackground7" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground7"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -10.0

[node name="Intro7Layer1" type="Sprite2D" parent="ParallaxBackground7/ParallaxLayer"]
position = Vector2(6, -2)
texture = ExtResource("25_cheno")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground7"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -4.0

[node name="Intro7Layer2" type="Sprite2D" parent="ParallaxBackground7/ParallaxLayer2"]
position = Vector2(6, -2)
texture = ExtResource("26_okygo")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground7"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 1.0

[node name="Intro7Layer3" type="Sprite2D" parent="ParallaxBackground7/ParallaxLayer3"]
position = Vector2(6, -2)
texture = ExtResource("27_m2w88")

[node name="ParallaxBackground8" type="ParallaxBackground" parent="."]
visible = false

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground8"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 10.0

[node name="Intro8Layer1" type="Sprite2D" parent="ParallaxBackground8/ParallaxLayer"]
position = Vector2(6, -2)
texture = ExtResource("28_otq0j")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground8"]
z_index = 1
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = 2.0

[node name="Intro8Layer2" type="Sprite2D" parent="ParallaxBackground8/ParallaxLayer2"]
position = Vector2(6, -2)
texture = ExtResource("29_5i0wh")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground8"]
z_index = 3
position = Vector2(576, 324)
script = ExtResource("1_1d7ft")
SPEED = -1.0

[node name="Intro8Layer3" type="Sprite2D" parent="ParallaxBackground8/ParallaxLayer3"]
position = Vector2(6, -2)
texture = ExtResource("30_y5uig")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
